# pnmol-experiments

./: .gitignore  README.md  heat_1D.py  setup.cfg
.github/workflows/: ci.yaml
experiments/: figure1.py  figure2.py  figure3.py  figure4.py  figure_main.py  heat_1d.py  heat_1d_pnmol_vs_tornadox.py  plotting.py
experiments/archive/: heat_1d.py  heat_1d_pnmol_vs_tornadox.py
experiments/notebooks/: discretized_1D_PDE.ipynb  heat_1D.ipynb
experiments/results/figure1/: pnmol_latent_means.npy  pnmol_latent_stds.npy  pnmol_latent_ts.npy  pnmol_stds.npy  pnmol_white_means.npy  pnmol_white_stds.npy  pnmol_white_ts.npy  reference_means.npy  reference_stds.npy  reference_ts.npy  reference_xs.npy  tornadox_means.npy  tornadox_stds.npy  (+1 more)
experiments/style/: colors.mplstyle  font.mplstyle  lines_and_ticks.mplstyle  markers.mplstyle
src/pnmol/: __init__.py  differential_operator.py  diffops.py  discretize.py  init.py  iwp.py  kalman.py  kernels.py  latent.py  lfsolver.py  mesh.py  odefilter.py  pde_problems.py  pdefilter.py  problems.py  solver.py  sqrt.py  stacked_ssm.py  step.py  white.py
tests/: test_discretize.py  test_init.py  test_iwp.py  test_kalman.py  test_kernels.py  test_linops.py  test_mesh.py  test_odefilter.py  test_pde_problems.py  test_pdefilter.py  test_problems.py  test_rv.py  test_solver.py  test_sqrt.py  test_stacked_ssm.py  test_step.py  test_white.py
tests/test_base/: test_iwp.py  test_kalman.py  test_rv.py  test_sqrt.py  test_stacked_ssm.py
tests/test_ode/: test_init.py  test_step.py
tests/test_odetools/: test_init.py  test_step.py
(+132 files in other folders)
