[metadata]
name = pnmol
version = attr: pnmol.__version__
author = Nicholas Krämer, Jonathan Schmidt
license = MIT
license_file = LICENSE

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
install_requires =
    numpy
    scipy
    jax
    jaxlib
    matplotlib
    pylint
    pytest
    black
    isort
    tqdm
