[metadata]
name = pnmol
version = attr: pnmol.__version__
author = Nicholas Krämer, Jonathan Schmidt
license = MIT
license_file = LICENSE

[options]
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy
    scipy
    jax
    jaxlib
    matplotlib
    pylint
    pytest
    black
    isort
python_requires = >=3.8

[options.packages.find]
where=src
